--- a/404.html
+++ b/404.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>@font-face{font-display:swap;font-family:Sora;font-style:normal;font-weight:100 800;src:url(/artemiykv.github.io/assets/Sora-Variable.dTuP7h03.woff2) format("woff2"),url(/artemiykv.github.io/assets/Sora-Variable.CNpk9Fj5.woff) format("woff"),url(/artemiykv.github.io/assets/Sora-Variable.Bv7iWatf.ttf) format("truetype")}html{scroll-behavior:smooth}body{font-size:2rem;height:150vh;margin:0}h1{color:#000;font-weight:300}h1,h2{font-family:Sora,serif}h2{font-size:1.5rem;font-weight:600}p{font-family:Sora,serif;font-variation-settings:"wght" 400;margin:0}p>a{font-size:2rem}a{font-size:.875rem}a,span{font-family:Sora,serif}</style>
+<style>@font-face{font-display:swap;font-family:Sora;font-style:normal;font-weight:100 800;src:url(/assets/Sora-Variable.dTuP7h03.woff2) format("woff2"),url(/assets/Sora-Variable.CNpk9Fj5.woff) format("woff"),url(/assets/Sora-Variable.Bv7iWatf.ttf) format("truetype")}html{scroll-behavior:smooth}body{font-size:2rem;height:150vh;margin:0}h1{color:#000;font-weight:300}h1,h2{font-family:Sora,serif}h2{font-size:1.5rem;font-weight:600}p{font-family:Sora,serif;font-variation-settings:"wght" 400;margin:0}p>a{font-size:2rem}a{font-size:.875rem}a,span{font-family:Sora,serif}</style>
 <style>.page-enter-active,.page-leave-active{transition:all .4s}.page-enter-from,.page-leave-to{filter:blur(1rem);opacity:0}</style>
-<link rel="stylesheet" href="/artemiykv.github.io/assets/entry.B0b_3z4T.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/artemiykv.github.io/assets/aCIiljY3.js">
-<link rel="prefetch" as="style" crossorigin href="/artemiykv.github.io/assets/default.DuiR_rta.css">
-<link rel="prefetch" as="script" crossorigin href="/artemiykv.github.io/assets/BDZvm5H4.js">
-<link rel="prefetch" as="script" crossorigin href="/artemiykv.github.io/assets/B3wR_ZCf.js">
-<link rel="prefetch" as="script" crossorigin href="/artemiykv.github.io/assets/D0EZC25d.js">
-<link rel="prefetch" as="script" crossorigin href="/artemiykv.github.io/assets/CAEsyBJY.js">
-<link rel="prefetch" as="script" crossorigin href="/artemiykv.github.io/assets/Cq52mpKa.js">
-<script type="module" src="/artemiykv.github.io/assets/aCIiljY3.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1754681290445,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{content:{wsUrl:""},mdc:{components:{prose:true,map:{}},headings:{anchorLinks:{h1:false,h2:true,h3:true,h4:true,h5:false,h6:false}}}},app:{baseURL:"/artemiykv.github.io",buildId:"3b0f75b3-bf70-4c1b-8099-059a9df1df05",buildAssetsDir:"assets",cdnURL:""}}</script></body></html>
+<link rel="stylesheet" href="/assets/entry.B0b_3z4T.css" crossorigin>
+<link rel="modulepreload" as="script" crossorigin href="/assets/aCIiljY3.js">
+<link rel="prefetch" as="style" crossorigin href="/assets/default.DuiR_rta.css">
+<link rel="prefetch" as="script" crossorigin href="/assets/BDZvm5H4.js">
+<link rel="prefetch" as="script" crossorigin href="/assets/B3wR_ZCf.js">
+<link rel="prefetch" as="script" crossorigin href="/assets/D0EZC25d.js">
+<link rel="prefetch" as="script" crossorigin href="/assets/CAEsyBJY.js">
+<link rel="prefetch" as="script" crossorigin href="/assets/Cq52mpKa.js">
+<script type="module" src="/assets/aCIiljY3.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1754681403205,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{content:{wsUrl:""},mdc:{components:{prose:true,map:{}},headings:{anchorLinks:{h1:false,h2:true,h3:true,h4:true,h5:false,h6:false}}}},app:{baseURL:"/",buildId:"2b656ca3-b535-4611-a332-a995d3104798",buildAssetsDir:"assets",cdnURL:""}}</script></body></html>
